# tech-interview-as-a-service

./: .gitignore  Cargo.toml  LICENSE  README.md  wrangler.toml
.github/: dependabot.yml
src/: lib.rs  utils.rs
src/service/: fizzbuzz.rs  mod.rs
src/service/sort/: algorithm.rs  mod.rs
src/services/: fizzbuzz.rs  index.rs  mod.rs  sort.rs
src/services/sort/: algorithm.rs  mod.rs
src/traits/: algorithm.rs  help.rs  mod.rs  service.rs
