[package]
name = "interview"
version = "0.1.0"
authors = ["Josh Hill <github@pyxxilated.studio>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
const_format = "0.2.34"
worker = "0.5.0"
serde = "1.0.216"
serde_json = "1.0.134"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
lto = true
codegen-units = 1
opt-level = "s"
